force-app/main/default/objects/LLC_BI__Loan_Assumptions__c/LLC_BI__Loan_Assumptions__c.object-meta.xml
<CustomObject>
    <description>The loan assumptions object stores details related to a particular loan that a piece of commercial real estate collateral is pledged to. The fields on this object are used to calculate debt payments that are used on the NOI statement and withing the Sensitivity Analysis features in the CRE Analysis application.</description>
    <label>Loan Assumptions</label>
    <nameField>
        <displayFormat>LA-{0000}</displayFormat>
        <label>Loan Assumptions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Assumptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>