force-app/main/default/objects/LLC_BI__Loan_Assumptions__c/fields/LLC_BI__Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Interest_Rate__c</fullName>
    <description>Used to calculate monthly and annual payment amounts that are displayed on the NOI statement and Sensitivity Analysis CRE Analysis Features.</description>
    <label>Interest Rate (%)</label>
    <precision>16</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>