force-app/main/default/objects/LLC_BI__Loan_Assumptions__c/fields/LLC_BI__Policy_DSCR__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Policy_DSCR__c</fullName>
    <description>The value entered in this input field is used in a calculation to determine the maximum loan amount given this DSCR.</description>
    <label>Policy DSCR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>