force-app/main/default/objects/LLC_BI__Loan_Assumptions__c/fields/LLC_BI__Requested_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Requested_Loan_Amount__c</fullName>
    <description>Used to calculate monthly and annual payment amounts that are displayed on the NOI statement and Sensitivity Analysis CRE Analysis Features.</description>
    <label>Requested Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>