force-app/main/default/objects/LLC_BI__Loan_Assumptions__c/fields/LLC_BI__Selected_Period__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Selected_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for calculating the debt service amount displayed on a NOI Statement and in the sensitivity analysis application.</description>
    <label>Selected Period</label>
    <referenceTo>LLC_BI__Spread_Statement_Period__c</referenceTo>
    <relationshipLabel>Loan Assumptions</relationshipLabel>
    <relationshipName>Loan_Assumptions</relationshipName>
    <type>Lookup</type>
</CustomField>